--- a/teleprompter/pubspec.yaml
+++ b/teleprompter/pubspec.yaml
@@ -37,10 +37,10 @@ dependencies:
   
   # Window management
   window_manager: ^0.3.7
-  bitsdojo_window: ^0.1.6
+  hotkey_manager: ^0.2.3
+  system_tray: ^2.0.2
   
   # Transparency and visual effects
-  flutter_acrylic: ^1.1.3
   macos_window_utils: ^1.3.0
   
   # State management
