--- a/teleprompter/pubspec.yaml
+++ b/teleprompter/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   
   # Utilities
   uuid: ^3.0.7
+  sqflite: ^2.4.2
+  path: ^1.9.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
